[package]
name = "kaspa-rpc-service"
version = "0.1.0"
edition = "2021"
authors = ["Kaspa RPC Service"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC & Protobuf
tonic = "0.12"
prost = "0.13"

# Auth
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
config = "0.14"
dotenv = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bytes = "1.8"

# Metrics (for latency tracking)
prometheus = "0.13"
lazy_static = "1.5"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
